fix overflow

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     margin: 0;
     /* border: 1px solid rgb(255, 255, 255); */
     font-family: "Poppins", serif;
+    overflow-x: hidden;
 }
 
 nav {
